--- a/style.css
+++ b/style.css
@@ -19,10 +19,10 @@ body {
     height: 100%;
     overflow: hidden;
     display: flex;
-    padding-bottom: 100px;
+    padding-bottom: 200px;
     flex-direction: column;
-    justify-content: flex-end;
     align-items: center;
+    justify-content: end;
 }
 
 .typing {
